--- a/app/src/main/res/drawable/rounded_text_view_chat_message.xml
+++ b/app/src/main/res/drawable/rounded_text_view_chat_message.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="1dp"
-        android:color="@color/white" />
+        android:color="@color/message_background" />
 
     <solid android:color="@color/message_background" />
 
