--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -120,11 +120,12 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_chat"
-            android:layout_width="@dimen/fab_button_diameter"
-            android:layout_height="@dimen/fab_button_diameter"
+            android:layout_width="@dimen/fab_button_small_diameter"
+            android:layout_height="@dimen/fab_button_small_diameter"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             app:elevation="6dp"
+            android:scaleType="center"
             app:backgroundTint="@color/accentColor"
             app:pressedTranslationZ="12dp"
             android:layout_margin="16dp"
