--- a/app/src/main/res/layout/item_message_chat.xml
+++ b/app/src/main/res/layout/item_message_chat.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants">
-    
+
+    <!--DATE LAYOUT -->
     <RelativeLayout
         android:id="@+id/message_chat_date_layout"
         android:layout_width="match_parent"
@@ -21,6 +22,7 @@
 
     </RelativeLayout>
 
+    <!--ME LAYOUT MESSAGE -->
     <RelativeLayout
         android:id="@+id/message_chat_own_message_layout"
         android:layout_width="match_parent"
@@ -48,7 +50,7 @@
                 android:textSize="14sp"
                 android:textColor="@color/name_my_account"
                 android:gravity="right"
-                android:text="Me"
+                android:text="@string/chat_me_text"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/message_chat_time_text"/>
 
@@ -68,12 +70,68 @@
                 android:textColor="@color/name_my_account"
                 android:textSize="14sp"
                 android:inputType="textMultiLine"
-                android:background="@drawable/rounded_text_view_chat_message"
+                android:background="@drawable/rounded_text_view_chat_own_message"
                 android:padding="11dp"
                 android:gravity="right"/>
 
         </RelativeLayout>
 
     </RelativeLayout>
+
+    <!--CONTACT LAYOUT MESSAGE -->
+    <RelativeLayout
+        android:id="@+id/message_chat_contact_message_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/message_chat_date_layout">
+
+        <RelativeLayout
+            android:id="@+id/title_contact_message_layout"
+            android:layout_width="match_parent"
+            android:layout_height="26dp"
+            android:gravity="left">
+
+            <TextView
+                android:id="@+id/message_chat_contact_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textColor="@color/name_my_account"
+                android:gravity="left"
+                android:layout_centerVertical="true"/>
+
+            <TextView
+                android:id="@+id/contact_message_chat_time_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="@color/file_list_second_row"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/message_chat_contact_text"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/content_contact_message_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/title_contact_message_layout"
+            android:gravity="left">
+
+            <mega.privacy.android.app.components.WrapTextView
+                android:id="@+id/content_contact_message_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/name_my_account"
+                android:textSize="14sp"
+                android:inputType="textMultiLine"
+                android:background="@drawable/rounded_text_view_chat_contact_message"
+                android:padding="11dp"
+                android:gravity="left"/>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
