--- a/app/src/main/res/layout-v21/sliding_chat_panel.xml
+++ b/app/src/main/res/layout-v21/sliding_chat_panel.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mega.privacy.android.app.components.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    xmlns:rounded="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sliding_layout_chat"
     android:layout_width="match_parent"
@@ -46,18 +47,32 @@
             android:id="@+id/file_list_chat_title_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
             android:orientation="horizontal" >
 
-            <ImageView
-                android:id="@+id/file_list_chat_title"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="2dp"
-                android:paddingTop="2dp"
-                android:src="@drawable/ic_share"
-                android:visibility="invisible" />
+            <RelativeLayout
+                android:id="@+id/recent_chat_list_relative_layout_avatar"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="18dp">
+
+                <mega.privacy.android.app.components.RoundedImageView
+                    android:id="@+id/sliding_chat_list_thumbnail"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_centerInParent="true"
+                    android:scaleType="fitCenter"
+                    rounded:border_color="@color/border_file_properties"
+                    rounded:border_width="0dp"
+                    rounded:corner_radius="20dp" />
+
+                <TextView
+                    android:id="@+id/sliding_chat_list_initial_letter"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_centerInParent="true"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:paddingBottom="3dp" />
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/file_list_chat_title_text"
@@ -66,10 +81,15 @@
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
                 android:layout_marginLeft="10dp"
-                android:text="@string/upload_select_file_type"
-                android:textColor="@color/transparent_black"
+                android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="90dp"
+            android:background="@color/chat_sliding_panel_separator"/>
 
         <LinearLayout
             android:id="@+id/file_list_info_chat_layout"
