--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -83,4 +83,6 @@
 
     <color name="chat_background">#08000000</color>
     <color name="message_background">#0f000000</color>
+
+    <color name="chat_sliding_panel_separator">#dcdcdcdc</color>
 </resources>
