--- a/app/src/main/res/layout-v21/sliding_chat_panel.xml
+++ b/app/src/main/res/layout-v21/sliding_chat_panel.xml
@@ -47,19 +47,22 @@
             android:id="@+id/file_list_chat_title_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal" >
 
             <RelativeLayout
                 android:id="@+id/recent_chat_list_relative_layout_avatar"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:layout_marginLeft="18dp">
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
 
                 <mega.privacy.android.app.components.RoundedImageView
                     android:id="@+id/sliding_chat_list_thumbnail"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
                     android:scaleType="fitCenter"
                     rounded:border_color="@color/border_file_properties"
                     rounded:border_width="0dp"
@@ -67,8 +70,8 @@
 
                 <TextView
                     android:id="@+id/sliding_chat_list_initial_letter"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:gravity="center_horizontal|center_vertical"
                     android:paddingBottom="3dp" />
@@ -78,9 +81,8 @@
                 android:id="@+id/file_list_chat_title_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="2dp"
-                android:paddingTop="2dp"
-                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="21dp"
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
         </LinearLayout>
@@ -88,7 +90,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginLeft="90dp"
+            android:layout_marginLeft="65dp"
             android:background="@color/chat_sliding_panel_separator"/>
 
         <LinearLayout
@@ -104,6 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
+                android:layout_marginLeft="2dp"
                 android:paddingTop="2dp"
                 android:src="@drawable/info_ic"
                 android:visibility="visible" />
@@ -114,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="15dp"
                 android:text="@string/contact_properties_activity"
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
@@ -132,6 +135,7 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
                 android:src="@drawable/ic_ignore"
@@ -143,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="15dp"
                 android:text="@string/general_leave"
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
@@ -161,6 +165,7 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
                 android:src="@drawable/ic_volume_off_black"
@@ -172,7 +177,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="15dp"
                 android:text="@string/general_mute"
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
