--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -24,7 +24,7 @@
         android:id="@+id/writing_container_layout_chat_layout"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:background="@color/chat_background"
         android:orientation="vertical">
 
@@ -76,6 +76,93 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/upload_panel_chat"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_above="@+id/writing_container_layout_chat_layout"
+        android:visibility="gone"
+        android:background="@color/accentColor">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:id="@+id/upload_from_gallery_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_upload_image"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/upload_audio_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_upload_audio"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/upload_from_cloud_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_cloud_drive"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/upload_from_filesystem_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_upload_pick_file"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/upload_contact_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_contacts"/>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -87,6 +174,7 @@
         android:layout_above="@id/writing_container_layout_chat_layout"
         android:orientation="vertical">
 
+        <!-- Layout to invite contact -->
         <ScrollView
             android:id="@+id/message_scroll_view_chat_layout"
             android:layout_width="match_parent"
@@ -112,6 +200,7 @@
             </RelativeLayout>
         </ScrollView>
 
+        <!-- Layout with chat content -->
         <RelativeLayout
             android:id="@+id/relative_chat_layout"
             android:layout_width="match_parent"
