--- a/app/src/main/res/layout-v21/sliding_chat_panel.xml
+++ b/app/src/main/res/layout-v21/sliding_chat_panel.xml
@@ -46,17 +46,16 @@
         <LinearLayout
             android:id="@+id/file_list_chat_title_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="72dp"
             android:layout_marginTop="8dp"
             android:orientation="horizontal" >
 
             <RelativeLayout
                 android:id="@+id/recent_chat_list_relative_layout_avatar"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp">
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="16dp">
 
                 <mega.privacy.android.app.components.RoundedImageView
                     android:id="@+id/sliding_chat_list_thumbnail"
@@ -77,20 +76,38 @@
                     android:paddingBottom="3dp" />
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/file_list_chat_title_text"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="21dp"
-                android:textColor="@color/name_my_account"
-                android:textSize="16sp"/>
+                android:layout_marginLeft="16dp">
+
+                <TextView
+                    android:id="@+id/file_list_chat_name_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/name_my_account"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:id="@+id/file_list_chat_mail_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/mail_my_account"
+                    android:gravity="center_vertical"
+                    android:layout_below="@+id/file_list_chat_name_text"
+                    android:textSize="14sp"/>
+
+            </RelativeLayout>
+
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginLeft="65dp"
+            android:layout_marginLeft="72dp"
             android:background="@color/chat_sliding_panel_separator"/>
 
         <LinearLayout
@@ -106,7 +123,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
-                android:layout_marginLeft="2dp"
+                android:layout_marginLeft="5dp"
                 android:paddingTop="2dp"
                 android:src="@drawable/info_ic"
                 android:visibility="visible" />
@@ -117,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="18dp"
                 android:text="@string/contact_properties_activity"
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
@@ -135,7 +152,7 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
+                android:layout_marginLeft="5dp"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
                 android:src="@drawable/ic_ignore"
@@ -147,7 +164,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="18dp"
                 android:text="@string/general_leave"
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
@@ -165,7 +182,7 @@
                 style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
+                android:layout_marginLeft="5dp"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
                 android:src="@drawable/ic_volume_off_black"
@@ -177,7 +194,7 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
-                android:layout_marginLeft="15dp"
+                android:layout_marginLeft="18dp"
                 android:text="@string/general_mute"
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
