--- a/app/src/main/res/layout/activity_chat_contact_properties.xml
+++ b/app/src/main/res/layout/activity_chat_contact_properties.xml
@@ -25,6 +25,7 @@
                     android:id="@+id/chat_contact_properties_image_layout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@color/transparent_black"
                     app:layout_collapseMode="parallax"
                     android:fitsSystemWindows="true" >
 
@@ -40,7 +41,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:adjustViewBounds="true"
-                        android:scaleType="fitXY" />
+                        android:scaleType="fitCenter" />
 
                     <View
                         android:layout_width="match_parent"
