--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_container_chat"
     android:background="@color/white"
     android:layout_width="match_parent"
@@ -24,7 +25,7 @@
         android:id="@+id/writing_container_layout_chat_layout"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:background="@color/chat_background"
         android:orientation="vertical">
 
@@ -49,7 +50,7 @@
                 android:layout_marginRight="16dp"
                 android:src="@drawable/ic_send_black" />
 
-            <EditText
+            <io.github.rockerhieu.emojicon.EmojiconEditText
                 android:id="@+id/edit_text_chat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,7 +63,9 @@
                 android:layout_centerVertical="true"
                 android:textSize="14sp"
                 android:hint="@string/type_message_hint"
-                android:layout_toLeftOf="@+id/send_message_icon_chat"/>
+                android:layout_toLeftOf="@+id/send_message_icon_chat"
+                android:inputType="textMultiLine|textShortMessage"
+                emojicon:emojiconSize="16sp"/>
 
             <RelativeLayout
                 android:id="@+id/writing_disabled_linear_layout_chat"
@@ -73,6 +76,13 @@
             </RelativeLayout>
 
         </RelativeLayout>
+
+        <FrameLayout
+            android:id="@+id/chat_emoji_keyboard"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@id/writing_linear_layout_chat"
+            />
 
     </RelativeLayout>
 
