Bug #5335 and bug #5337: - Incoming Tab show option "Move to Rubbish Bin" and "Share with" incorrectly shown - Add  fab button and sliding panel to allow uploading files in the screen "Incoming shares with"  (if the user has permissions)

--- a/app/src/main/res/layout-v21/activity_main_contact_properties.xml
+++ b/app/src/main/res/layout-v21/activity_main_contact_properties.xml
@@ -20,7 +20,7 @@
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 tools:context=".ContactPropertiesActivityLollipop" />
 
-            <android.support.design.widget.CoordinatorLayout
+            <FrameLayout
                 android:id="@+id/fragment_container_contact_properties"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
