--- a/app/src/main/res/layout-v21/fragment_contact_file_list.xml
+++ b/app/src/main/res/layout-v21/fragment_contact_file_list.xml
@@ -292,6 +292,34 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/contact_file_list_option_send_inbox_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/contact_file_list_option_send_inbox"
+                    style="@style/dialogActionButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
+                    android:src="@drawable/ic_send_file" />
+
+                <TextView
+                    android:id="@+id/contact_file_list_option_send_inbox_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/context_send_file_inbox"
+                    android:textColor="@color/name_my_account"
+                    android:textSize="16sp"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/contact_file_list_option_move_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -348,33 +376,6 @@
                     android:textSize="16sp"/>
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/contact_file_list_option_remove_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <ImageView
-                    android:id="@+id/contact_file_list_option_remove"
-                    style="@style/dialogActionButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="2dp"
-                    android:paddingTop="2dp"
-                    android:src="@drawable/ic_delete" />
-
-                <TextView
-                    android:id="@+id/contact_file_list_option_remove_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="2dp"
-                    android:paddingTop="2dp"
-                    android:layout_marginLeft="10dp"
-                    android:text="@string/context_delete"
-                    android:textColor="@color/name_my_account"
-                    android:textSize="16sp"/>
-            </LinearLayout>
         </LinearLayout>
     </mega.privacy.android.app.components.SlidingUpPanelLayout>
 
